# MarioC-

./: MarioC++.sln  MarioC++.vcxproj  README.md
mario_stufe1/: CMakeLists.txt  README.md
mario_stufe1/assets/levels/: level1.json
mario_stufe1/include/: Animation.h  AnimationController.h  Camera.h  CollisionSystem.h  Enemy.h  EnemyStates.h  EnemyType.h  Entity.h  EntityManager.h  EventBus.h  Game.h  GameEvent.h  GameStates.h  IGameState.h  IPlayerState.h  InteractionSystem.h  LevelLoader.h  PhysicsConstants.h  Player.h  PlayerAction.h  PlayerPowerState.h  PlayerStates.h  SaveData.h  TileType.h
mario_stufe1/src/: Animation.cpp  AnimationController.cpp  Camera.cpp  CollisionSystem.cpp  Commands.cpp  Enemy.cpp  Entity.cpp  EventBus.cpp  Game.cpp  GameStates.cpp  InputHandler.cpp  InputSetup_example.txt  InteractionSystem.cpp  Item.cpp  Level.cpp  ParticleSystem.cpp  Player.cpp  PlayerStates.cpp  SoundManager.cpp
mariobros/: README.md  SCREENSHOTS.md
mariobros/assets/fonts/: LICENSE.txt
mariobros/include/: AnimationController.h  Camera.h  Coin.h  Commands.h  EventType.h  Fireball.h  Game.h  HUD.h  ICommand.h  IComponent.h  IEnemyState.h  InputHandler.h  Item.h  ItemType.h  Level.h  LevelData.h  ParticleSystem.h  Player.h  SaveManager.h  SoundManager.h  Tilemap.h
mariobros/src/: Animation.cpp  Coin.cpp  CollisionSystem.cpp  EnemyStates.cpp  Entity.cpp  Fireball.cpp  Game.cpp  GameStates.cpp  HUD.cpp  LevelLoader.cpp  SaveManager.cpp  Tilemap.cpp  main.cpp
